# obstacle_detect

./: .gitignore  CMakeLists.txt  README.md  package.xml  rplidar_ranges.odg
config/: config.yaml
include/: obstacle_detect.h
launch/: obstacle_detect.launch
msg/: Orientation.msg  VectorPair.msg
src/: obstacle_detect.cpp
